--- a/index.html
+++ b/index.html
@@ -48,12 +48,43 @@
         </section>
         <!-- features section  -->
         <section class="features">
-             
+             <div class="features-content">
+                <h3 class="section-title ">
+                    Features you will love & enjoy 
+                </h3>
+                <p class="text-light-gray">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+                </p>
+                <div class="card">
+                    <h4>Dextop & Mobile Version</h4>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised..........</p>
+                </div>
+                <div class="card">
+                    <h4>Dextop & Mobile Version</h4>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised..........</p>
+                </div>
+                <div class="card">
+                    <h4>Dextop & Mobile Version</h4>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised..........</p>
+                </div>
+                <div class="card">
+                    <h4>Dextop & Mobile Version</h4>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised..........</p>
+                </div>
+
+             </div>
+             <div class="feature-image">
+                <img src="images/architect.png" alt="">
+                <div class="ten-years-badge">
+                    <h2>10+ Year</h2>
+                    <p>Experience</p>
+                </div>
+             </div>
         </section>
         <!-- fact section  -->
-        <section>
+        <section class="facts">
             <h3 class="section-title">Some Facts</h3>
-            <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            <p class="text-light-gray text-light-gray2">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
             <div class="facts-card-container">
                 <!-- .card*4>img+h2.card-stats+p.card-title text-light-gray  -->
                 <div class="card">
@@ -79,9 +110,26 @@
 
             </div>
         </section>
-    </main>
-    <footer>
+                <!-- Sponsor's section  -->
+                <section class="sponsors">
+                    <h3 class="section-tile">
+                        Our Sponsors
+                    </h3>
+                    <p class="text-light-gray">
+                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.
+                    </p>
+                    <div class="sponsors-img-container">
+                        <img src="images/sponsors/spotify.png" alt="">
+                        <img src="images/sponsors/amazon.png" alt="">
+                        <img src="images/sponsors/google.png" alt="">
+                        <img src="images/sponsors/telerama.png" alt="">
+                        <img src="images/sponsors/figma.png" alt="">
+                    </div>
+                </section>
 
+    </main>
+    <footer class="footer-section ">
+        <p class="text-light-gray">All rights reserved copyright@2023 startup landing page design</p>
     </footer>
 </body>
 </html>
